The Grinder 3.9.1
-----------------

  Fix bug 3517593 - Recording Jython script with 3.9 produced an
  invalid script. Thanks to greghmerrill and John Felten for the beta
  testing and report.


The Grinder 3.9
---------------

  Fix bug 3511553 - TCP proxy recorded scripts do not extract headers
  correctly, leaving a syntactically incorrect script. Thanks to Bill
  Smith for testing the fix, and correcting the Clojure scirpt
  generation.

  Fix bug 3511035 - 3.8 bundles additional, older version of xmlbeans.

  Fix bug 3511536 - Generated Clojure script uses logger API incorrectly.
  Thanks to Chris Bolton for the report. I also disabled the "offline
  debug" macros by default.

  Fix bug 3512095 - proxy-generated XML gives each attribute a new
  namespace. Thanks to Bill Smith for the report.


The Grinder 3.8
---------------

  Fix bug 3471476 - Null Pointer Exception in the TCPProxy when making
  multiple connections through a chained HTTPS proxy. Thanks to Tadge
  for the report and testing.

  Fix bug 3484390 - FireFox 10 and HTTPS triggers a
  NullPointerException. Thanks to Ouray Viney for the report and
  testing.

  Fix bug 3431287 and bug 3489034 - Ignore HttpOnly attributes in the
  middle of cookies. Thanks to Alex Crane and Jeremy for the reports.

  TCPProxy HTTP recording: improve the extraction of common headers to
  reduce the number of common header sets.

  Re-implement TCPProxy support for the HTTPPlugin.initialTest property.

  The TCPProxy supports the recording of additional HTTP headers.

  Fix bug 3475516 - the TCPProxy now records Faces-Request header for
  JSF 2.0 AJAX requests. Thanks to Diego Vicentini for the report.

  Fix bug 3505114 - userLong4 custom statistic value was overridden
  by the test time. Thanks to Fei for the report.

  Fix bug 3505060 - TCPProxy fails to handle concurrent HTTPS requests.
  Thanks to Anders Storsveen for the report, and contributing part of
  the fix.
